--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -4,7 +4,7 @@
       src="{{ recipe.imagePath }}"
       alt="{{ recipe.name }}"
       class="img-responsive"
-      style="max-height: 300px;"
+      style="max-height: 300px"
     />
   </div>
 </div>
@@ -15,7 +15,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <div class="btn-group">
+    <div class="btn-group" appDropDown>
       <button class="btn btn-primary dropdown-toggle">
         Manage Recipe <span class="caret"></span>
       </button>
