--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,15 +6,17 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a href="#" (click)="onSelect('recipe')">Recipe</a>
+          <a href="#">Recipe</a>
         </li>
         <li>
-          <a href="#"(click)="onSelect('shopping-list')">Shopping List</a>
+          <a href="#">Shopping List</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown"  appDropDown>
-            <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
+        <li class="dropdown" appDropDown>
+          <a href="#" class="dropdown-toggle" role="button"
+            >Manage <span class="caret"></span
+          ></a>
           <ul class="dropdown-menu">
             <li><a href=""> Save Data</a></li>
             <li><a href="">Fetch Data</a></li>
