--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,10 +6,10 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a href="#">Recipe</a>
+          <a routerLink="/recipes" >Recipe</a>
         </li>
         <li>
-          <a href="#">Shopping List</a>
+          <a routerLink="/shopping-list" >Shopping List</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
