--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,8 @@
-<a href="#" class="list-group-item clearfix" (click)="onSelected()">
+<a
+  style="cursor: pointer"
+  class="list-group-item clearfix"
+  (click)="onSelected()"
+>
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
     <p class="list-group-item-text">{{ recipe.description }}</p>
@@ -8,8 +12,7 @@
       class="img-responsive"
       style="max-height: 50px"
       src="{{ recipe.imagePath }}"
-      alt="{{recipe.name}}"
+      alt="{{ recipe.name }}"
     />
   </span>
 </a>
- 
