--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -9,9 +9,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-12">
-    <h1>{{ recipe.name }}</h1>
-  </div>
+  <div class="col-xs-12"></div>
 </div>
 <div class="row">
   <div class="col-xs-12">
@@ -25,7 +23,7 @@
             >Add to shopping list</a
           >
         </li>
-        <li><a>Edit Recipe</a></li>
+        <li><a (click)="onEditRecipe()">Edit Recipe</a></li>
         <li><a>Delete Recipe</a></li>
       </ul>
     </div>
