--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,7 +1,8 @@
 <a
   routerLink="{{ recipe.name }}"
+  [routerLinkActive]="['active']"
   style="cursor: pointer"
-  class="list-group-item clearfix"
+  class="list-group-item clearfix "
 >
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
