--- a/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -29,14 +29,33 @@
       <div class="row">
         <div class="col-xs-12">
           <button
+            *ngIf="!editMode"
             class="btn btn-success"
             [disabled]="!addItemForm.valid"
             type="submit"
           >
             Add
           </button>
-          <button class="btn btn-danger" type="button">Delete</button>
-          <button class="btn btn-primary" type="button">Clear</button>
+          <button
+            *ngIf="editMode"
+            class="btn btn-success"
+            [disabled]="!addItemForm.valid"
+            type="button"
+            (click)="onUpdateItem()"
+          >
+            Update
+          </button>
+          <button
+            class="btn btn-danger"
+            type="button"
+            [disabled]="!editMode"
+            (click)="onDeleteItem()"
+          >
+            Delete
+          </button>
+          <button class="btn btn-primary" type="button" (click)="onClear()">
+            Clear
+          </button>
         </div>
       </div>
     </form>
