--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -8,9 +8,10 @@
         style="cursor: pointer"
         *ngFor="let ingredient of ingredients; let i = index"
         (click)="onEditItem(i)"
+        [ngClass]="{ 'active': i === selectedItemIndex && editmode}"
       >
-        {{ ingredient.name }} ({{ ingredient.amount }})</a
-      >
+        {{ ingredient.name }} ({{ ingredient.amount }})
+      </a>
     </ul>
   </div>
 </div>
