--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -54,18 +54,14 @@
           </div>
         </div>
       </div>
-      <div class="row" formGroupName="ingredients">
+      <div class="row">
         <div class="col-xs-12">
           <div class="row">
             <div class="col-xs-8">
-              <input type="text" class="form-control" formControlName="name" />
+              <input type="text" class="form-control" />
             </div>
             <div class="col-xs-2">
-              <input
-                type="number"
-                class="form-control"
-                formControlName="amount"
-              />
+              <input type="number" class="form-control"  />
             </div>
             <div class="col-xs-2">
               <button class="btn btn-danger">X</button>
